--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <!--MENU SUPERIOR-->
-    <nav class="navbar navbar-expand-lg bg-dark" style="--bs-bg-opacity: .95;">
+    <nav class="navbar navbar-expand-lg bg-dark myNavbar" style="--bs-bg-opacity: .95;">
         <div class="container-fluid">
             <a class="ms-lg-3 d-flex">
                 <img class="navbar-brand" src="./public/alienIcon.png" alt="Icon" width="50px">
@@ -73,9 +73,16 @@
                     <a href="#" class="badge text-wrap p-3 ms-3" id="config"><ion-icon name="build"></ion-icon>Configuration</a>
                 </div>
             </div>
+            
+            <!--BR-->
+            <div class="col-1 border-top" id="gradient">
+
+            </div>
             <!--FORMS Y CONTENIDO-->
-            <div class="col-10 border-top" id="content">
-                <p class="align-middle text-center">Aqui van todos los forms</p>
+            <div class="col-9 border-top" id="content">
+                <div class="container-fluid">
+                    <p class="align-middle text-center text-light">Aqui van todos los forms</p>
+                </div>
             </div>
         </div>
     </div>
