--- a/linkDePago.html
+++ b/linkDePago.html
@@ -73,8 +73,13 @@
                     <a href="#" class="badge text-wrap p-3 ms-3" id="config"><ion-icon name="build"></ion-icon>Configuration</a>
                 </div>
             </div>
+
+            <!--BR-->
+            <div class="col-1 border-top" id="gradient">
+
+            </div>
             <!--FORMS Y CONTENIDO-->
-            <div class="col-10 border-top" id="content">
+            <div class="col-9 border-top" id="content">
                 <p class="align-middle text-center">Aqui van todos los forms de Link de Pago</p>
             </div>
         </div>
