--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--MENU SUPERIOR-->
     <nav class="navbar navbar-expand-lg bg-dark myNavbar" style="--bs-bg-opacity: .95;">
         <div class="container-fluid">
-            <a class="ms-lg-3 d-flex">
+            <a class="ms-lg-3 d-flex" href="./index.html">
                 <img class="navbar-brand" src="./public/alienIcon.png" alt="Icon" width="50px">
                 <h2 class="text-light ms-3 ">Company Name</h2>
             </a>
@@ -53,24 +53,35 @@
     <div class="container-fluid">
         <div class="row">
             <!--MENU IZQUIERDA-->
-            <div class="col-2 border-top" id="asideMenu">
-                <div class="accordion accordion-flush" id="asideMenuAccordion">
-                    <div class="accordion-item border border-start-0 border-end-0">
-                        <h2 class="accordion-header" id="businessWalletHeader">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#businessWalletCollapse" aria-expanded="false" aria-controls="businessWalletCollapse">
-                                <ion-icon name="wallet"></ion-icon> Business Wallet
-                            </button>
-                        </h2>
-                        <div class="accordion-collapse collapse" id="businessWalletCollapse" aria-labelledby="businessWalletHeader" data-bs-parent="#asideMenuAccordion">
-                            <div class="accordion-body">
-                                <a href="terminalVirtual.html" class="d-block p-3 text-wrap badge"><ion-icon name="card"></ion-icon>Terminal Virtual</a>
-                                <a href="linkDePago.html" class="d-block p-3 text-wrap badge"><ion-icon name="clipboard"></ion-icon>Link de Pago</a>
+            <div class="col-2 container-fluid" id="asideMenu">
+                <div class="row mb-2">
+                    <div class="accordion accordion-flush" id="asideMenuAccordion">
+                        <div class="accordion-item border border-start-0 border-end-0">
+                            <h2 class="accordion-header" id="businessWalletHeader">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#businessWalletCollapse" aria-expanded="false"
+                                    aria-controls="businessWalletCollapse">
+                                    <ion-icon name="wallet"></ion-icon> Business Wallet
+                                </button>
+                            </h2>
+                            <div class="accordion-collapse collapse" id="businessWalletCollapse"
+                                aria-labelledby="businessWalletHeader" data-bs-parent="#asideMenuAccordion">
+                                <div class="accordion-body">
+                                    <a href="terminalVirtual.html" class="d-block p-3 text-wrap badge"><ion-icon
+                                            name="card"></ion-icon>Terminal Virtual</a>
+                                    <a href="linkDePago.html" class="d-block p-3 text-wrap badge"><ion-icon
+                                            name="clipboard"></ion-icon>Link de Pago</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="fixed-bottom">
-                    <a href="#" class="badge text-wrap p-3 ms-3" id="config"><ion-icon name="build"></ion-icon>Configuration</a>
+                <div class="row" id="config">
+                    <div class="container">
+                        <a href="#" class="badge text-wrap p-3 ms-3">
+                            <ion-icon name="build"></ion-icon>Configuration
+                        </a>
+                    </div>
                 </div>
             </div>
             
